compiler/testData/compileKotlinAgainstCustomBinaries/prohibitNestedClassesByDollarName/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/prohibitNestedClassesByDollarName/main.kt:6:10: error: unresolved reference 'Outer$Nested'.
    test.`Outer$Nested`()
         ^
compiler/testData/compileKotlinAgainstCustomBinaries/prohibitNestedClassesByDollarName/main.kt:9:10: error: unresolved reference 'JavaOuter$JavaNested'.
    test.`JavaOuter$JavaNested`()
         ^
COMPILATION_ERROR
